tests/elab/errors/or_pattern_alt_names.snapshot
exit status: 1

stdout = """
def f0: Bool =
    let a: Int = 0;
    false;
def f1: Bool =
    let a: Int = 0;
    false;
def f2: Bool =
    let a: Int = 0;
    false;
types of expressions:
span   | source                                   | type
-------|------------------------------------------|-----------------------------
9..55 | match 0 {\n    a |...\n    _ => true,\n} | Bool
15..16 | 0                                        | Int
32..37 | false                                    | Bool
48..52 | true                                     | Bool
67..121 | match 0 {\n    a |...\n    _ => true,\n} | Bool
73..74 | 0                                        | Int
98..103 | false                                    | Bool
114..118 | true                                     | Bool
133..187 | match 0 {\n    a |...\n    _ => true,\n} | Bool
139..140 | 0                                        | Int
164..169 | false                                    | Bool
180..184 | true                                     | Bool
types of patterns:
span   | source                                   | type
-------|------------------------------------------|-----------------------------
23..24 | a                                        | Int
23..28 | a | b                                    | Int
27..28 | b                                        | Int
43..44 | _                                        | Int
81..82 | a                                        | Int
81..94 | a | b | a | b                            | Int
85..86 | b                                        | Int
89..90 | a                                        | Int
93..94 | b                                        | Int
109..110 | _                                        | Int
147..148 | a                                        | Int
147..160 | a | b | a | b                            | Int
151..152 | b                                        | Int
155..156 | a                                        | Int
159..160 | b                                        | Int
175..176 | _                                        | Int
metavars:
?0 = Bool
?1 = Bool
?2 = Bool
"""

stderr = """
error: set of names bound in or pattern alternatives do not match
  ┌─ tests/elab/errors/or_pattern_alt_names.pion:2:9
  │
2 │     a | b => false,
  │     -   ^

warning: unreachable pattern
  ┌─ tests/elab/errors/or_pattern_alt_names.pion:3:5
  │
3 │     _ => true,
  │     ^

error: set of names bound in or pattern alternatives do not match
  ┌─ tests/elab/errors/or_pattern_alt_names.pion:7:9
  │
7 │     a | b | a | b => false,
  │     -   ^

error: set of names bound in or pattern alternatives do not match
  ┌─ tests/elab/errors/or_pattern_alt_names.pion:7:17
  │
7 │     a | b | a | b => false,
  │     -           ^

warning: unreachable pattern
  ┌─ tests/elab/errors/or_pattern_alt_names.pion:8:5
  │
8 │     _ => true,
  │     ^

error: set of names bound in or pattern alternatives do not match
   ┌─ tests/elab/errors/or_pattern_alt_names.pion:12:9
   │
12 │     a | b | a | b => false,
   │     -   ^

error: set of names bound in or pattern alternatives do not match
   ┌─ tests/elab/errors/or_pattern_alt_names.pion:12:17
   │
12 │     a | b | a | b => false,
   │     -           ^

warning: unreachable pattern
   ┌─ tests/elab/errors/or_pattern_alt_names.pion:13:5
   │
13 │     _ => true,
   │     ^

aborting due to 5 previous errors
"""
